--- a/src/app/components/loan-calculator/loan-calculator.component.html
+++ b/src/app/components/loan-calculator/loan-calculator.component.html
@@ -49,7 +49,7 @@
     <hr />
     <div class="d-flex justify-content-between">
         <button type="submit" class="btn btn-primary" [disabled]="loanConditionsForm.invalid">Calculate</button>
-        <button type="button" class="btn btn-primary" (click)="onReset()">Reset</button>
+        <button type="button" class="btn btn-primary" (click)="onReset()" test-id="LoanCalculatorReset">Reset</button>
     </div>
 </form>
 <hr />
@@ -75,7 +75,7 @@
 <hr />
 <h2>Calculation History</h2>
 <div class="mb-3">
-    <div *ngFor="let history of loanHistory.loanHistory | async" class="card mb-1">
+    <div *ngFor="let history of loanHistory.loanHistory | async" class="card mb-1" test-id="historyCard">
         <div class="d-flex justify-content-between flex-wrap card-header">
             <span>Loan: {{ history.amount | number : '1.2-2' }} €</span>
             <span>Interest: {{ history.interest | number : '1.2-2' }} %</span>
